@@ -81,6 +81,12 @@
      -->
     <!--<mergeScheduler>org.apache.lucene.index.ConcurrentMergeScheduler</mergeScheduler>-->
 
+    <!--  
+	 To aid in advanced debugging, you may turn on IndexWriter debug logging. Uncommenting this and setting to true
+	 will set the file that the underlying Lucene IndexWriter will write its debug infostream to.
+	-->
+	<!-- <infoStream file="/path/file">false</infoStream> -->
+	  
     <!--
       This option specifies which Lucene LockFactory implementation to use.
       
