@@ -242,7 +242,11 @@ New Features
     and it is renamed to locateSolrHome (noble)
 
 62. SOLR-1216 :  disambiguate the replication command names. 'snappull' becomes 'fetchindex' 'abortsnappull' becomes 'abortfetch' (noble) 
-
+ 
+63. SOLR-1145: Add capability to specify an infoStream log file for the underlying Lucene IndexWriter in solrconfig.xml.
+    This is an advanced debug log file that can be used to aid developers in fixing IndexWriter bugs. See the commented
+    out example in the example solrconfig.xml under the indexDefaults section. 
+	(Chris Harris, Mark Miller)
 Optimizations
 ----------------------
  1. SOLR-374: Use IndexReader.reopen to save resources by re-using parts of the
